# cybersecurity-architecture

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
application-security/: api-security.md  secure-coding.md
checklists/: cloud-security.md  incident-response.md  kubernetes.md  security-assessment.md  vendor-security.md  web-app.md
cloud-security/aws/: guardduty.md
compliance/: gdpr.md  hipaa.md  lgpd.md  pci-dss.md  soc2.md
defensive-security/: detection-engineering.md  edr-xdr.md  monitoring.md  network-security.md  siem.md  soar.md  threat-intel.md  vuln-management.md
diagrams/: security-architecture.md
incident-response/: account-compromise.md  data-breach.md  ddos.md  insider-threat.md  malware.md  phishing.md  ransomware.md  supply-chain.md
offensive-security/: active-directory.md  cloud-attacks.md  exploitation.md  post-exploitation.md  privilege-escalation.md  reconnaissance.md  scanning.md  web-attacks.md
projects/api-forge/: README.md  pyproject.toml
projects/api-forge/src/api_forge/: __init__.py  cli.py  config.py  engine.py  llm.py
projects/api-forge/src/api_forge/generators/: __init__.py  base.py  fastapi.py  openapi.py
projects/api-shield/: Dockerfile  README.md  pyproject.toml
projects/api-shield/benchmarks/: README.md  __init__.py  locustfile.py  run_benchmarks.py
projects/api-shield/integrations/envoy/: README.md  envoy.yaml
projects/api-shield/integrations/kong/: README.md  handler.lua  schema.lua
projects/api-shield/src/api_shield/: __init__.py  cli.py  core.py  engine.py  server.py
projects/api-shield/src/api_shield/detectors/: __init__.py  auth.py  behavioral.py  bola.py  rate.py
projects/api-shield/tests/: __init__.py  conftest.py  test_core.py  test_detectors.py  test_engine.py
research/: api-gaps-analysis.md  api-security-deep-dive.md
security-frameworks/: cis-controls.md  iso27001.md  nist-csf.md  owasp-asvs.md  owasp-top10.md  zero-trust.md
terraform/aws/compliance/: main.tf
terraform/aws/guardduty/: main.tf
terraform/aws/identity/: main.tf
terraform/aws/logging/: main.tf
terraform/aws/network/: main.tf
terraform/aws/security-hub/: main.tf
terraform/aws/siem/: main.tf
terraform/aws/waf/: main.tf
terraform/azure/compliance/: main.tf
terraform/azure/identity/: main.tf
terraform/azure/logging/: main.tf
terraform/azure/network/: main.tf
terraform/azure/sentinel/: main.tf
terraform/azure/siem/: main.tf
terraform/azure/waf/: main.tf
terraform/gcp/armor/: main.tf
terraform/gcp/iam/: main.tf
terraform/gcp/logging/: main.tf
terraform/gcp/network/: main.tf
terraform/gcp/scc/: main.tf
threat-models/: attack-trees.md  diamond-model.md  kill-chain.md  mitre-attack.md  pasta.md  stride.md
tools/scripts/: aws-security-audit.sh  vulnerability-scanner.py
