[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-forge"
version = "0.1.0"
description = "AI-powered API generation from natural language"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "API Forge Contributors" }
]
keywords = [
    "api",
    "openapi",
    "code-generation",
    "llm",
    "fastapi",
    "rest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
api-forge = "api_forge.cli:app"

[project.urls]
Homepage = "https://github.com/api-forge/api-forge"
Documentation = "https://api-forge.dev/docs"
Repository = "https://github.com/api-forge/api-forge"

[tool.hatch.build.targets.wheel]
packages = ["src/api_forge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
